@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2017 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,9 @@
 
 package org.springframework.cache.interceptor;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 import org.springframework.cache.CacheManager;
 import org.springframework.lang.Nullable;
@@ -40,7 +41,7 @@ public class NamedCacheResolver extends AbstractCacheResolver {
 
 	public NamedCacheResolver(CacheManager cacheManager, String... cacheNames) {
 		super(cacheManager);
-		this.cacheNames = List.of(cacheNames);
+		this.cacheNames = new ArrayList<>(Arrays.asList(cacheNames));
 	}
 
 
