@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,9 +21,10 @@ import java.net.URI;
 import java.security.Principal;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -50,7 +51,6 @@ import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
-import org.springframework.util.MimeTypeUtils;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.cors.reactive.CorsUtils;
 import org.springframework.web.reactive.function.BodyExtractor;
@@ -71,7 +71,6 @@ import org.springframework.web.util.pattern.PathPatternParser;
 public abstract class RequestPredicates {
 
 	private static final Log logger = LogFactory.getLog(RequestPredicates.class);
-
 
 	/**
 	 * Return a {@code RequestPredicate} that always matches.
@@ -437,12 +436,12 @@ public abstract class RequestPredicates {
 
 		public HttpMethodPredicate(HttpMethod httpMethod) {
 			Assert.notNull(httpMethod, "HttpMethod must not be null");
-			this.httpMethods = Collections.singleton(httpMethod);
+			this.httpMethods = EnumSet.of(httpMethod);
 		}
 
 		public HttpMethodPredicate(HttpMethod... httpMethods) {
 			Assert.notEmpty(httpMethods, "HttpMethods must not be empty");
-			this.httpMethods = new LinkedHashSet<>(Arrays.asList(httpMethods));
+			this.httpMethods = EnumSet.copyOf(Arrays.asList(httpMethods));
 		}
 
 		@Override
@@ -453,15 +452,16 @@ public abstract class RequestPredicates {
 			return match;
 		}
 
+		@Nullable
 		private static HttpMethod method(ServerRequest request) {
 			if (CorsUtils.isPreFlightRequest(request.exchange().getRequest())) {
 				String accessControlRequestMethod =
 						request.headers().firstHeader(HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD);
-				if (accessControlRequestMethod != null) {
-					return HttpMethod.valueOf(accessControlRequestMethod);
-				}
+				return HttpMethod.resolve(accessControlRequestMethod);
 			}
-			return request.method();
+			else {
+				return request.method();
+			}
 		}
 
 		@Override
@@ -537,6 +537,7 @@ public abstract class RequestPredicates {
 		public String toString() {
 			return this.pattern.getPatternString();
 		}
+
 	}
 
 
@@ -565,13 +566,12 @@ public abstract class RequestPredicates {
 		}
 	}
 
-
 	private static class ContentTypePredicate extends HeadersPredicate {
 
 		private final Set<MediaType> mediaTypes;
 
 		public ContentTypePredicate(MediaType... mediaTypes) {
-			this(Set.of(mediaTypes));
+			this(new HashSet<>(Arrays.asList(mediaTypes)));
 		}
 
 		private ContentTypePredicate(Set<MediaType> mediaTypes) {
@@ -603,13 +603,12 @@ public abstract class RequestPredicates {
 		}
 	}
 
-
 	private static class AcceptPredicate extends HeadersPredicate {
 
 		private final Set<MediaType> mediaTypes;
 
 		public AcceptPredicate(MediaType... mediaTypes) {
-			this(Set.of(mediaTypes));
+			this(new HashSet<>(Arrays.asList(mediaTypes)));
 		}
 
 		private AcceptPredicate(Set<MediaType> mediaTypes) {
@@ -631,7 +630,7 @@ public abstract class RequestPredicates {
 				acceptedMediaTypes = Collections.singletonList(MediaType.ALL);
 			}
 			else {
-				MimeTypeUtils.sortBySpecificity(acceptedMediaTypes);
+				MediaType.sortBySpecificityAndQuality(acceptedMediaTypes);
 			}
 			return acceptedMediaTypes;
 		}
@@ -699,6 +698,7 @@ public abstract class RequestPredicates {
 							this.extension :
 							this.extensionPredicate);
 		}
+
 	}
 
 
@@ -809,7 +809,6 @@ public abstract class RequestPredicates {
 		}
 	}
 
-
 	/**
 	 * {@link RequestPredicate} that negates a delegate predicate.
 	 */
@@ -851,7 +850,6 @@ public abstract class RequestPredicates {
 			return "!" + this.delegate.toString();
 		}
 	}
-
 
 	/**
 	 * {@link RequestPredicate} where either {@code left} or {@code right} predicates
@@ -969,7 +967,6 @@ public abstract class RequestPredicates {
 		}
 
 		@Override
-		@Deprecated
 		public String methodName() {
 			return this.request.methodName();
 		}
@@ -1096,6 +1093,7 @@ public abstract class RequestPredicates {
 		public String toString() {
 			return method() + " " +  path();
 		}
+
 	}
 
 }
