@@ -17,10 +17,10 @@
 package org.springframework.web.socket.sockjs.transport.session;
 
 import java.io.IOException;
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Date;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -81,7 +81,7 @@ public abstract class AbstractSockJsSession implements SockJsSession {
 	 * @see #indicatesDisconnectedClient(Throwable)
 	 */
 	private static final Set<String> DISCONNECTED_CLIENT_EXCEPTIONS =
-			Set.of("ClientAbortException", "EOFException", "EofException");
+			new HashSet<>(Arrays.asList("ClientAbortException", "EOFException", "EofException"));
 
 
 	/**
@@ -271,7 +271,7 @@ public abstract class AbstractSockJsSession implements SockJsSession {
 			if (!isActive()) {
 				return;
 			}
-			Instant time = Instant.now().plus(this.config.getHeartbeatTime(), ChronoUnit.MILLIS);
+			Date time = new Date(System.currentTimeMillis() + this.config.getHeartbeatTime());
 			this.heartbeatTask = new HeartbeatTask();
 			this.heartbeatFuture = this.config.getTaskScheduler().schedule(this.heartbeatTask, time);
 			if (logger.isTraceEnabled()) {
@@ -407,14 +407,17 @@ public abstract class AbstractSockJsSession implements SockJsSession {
 	}
 
 	private static List<String> getUndelivered(String[] messages, int i) {
-		return switch (messages.length - i) {
-			case 0 -> Collections.emptyList();
-			case 1 -> (messages[i].trim().isEmpty() ?
-					Collections.<String>emptyList() : Collections.singletonList(messages[i]));
-			default -> Arrays.stream(Arrays.copyOfRange(messages, i, messages.length))
-					.filter(message -> !message.trim().isEmpty())
-					.collect(Collectors.toList());
-		};
+		switch (messages.length - i) {
+			case 0:
+				return Collections.emptyList();
+			case 1:
+				return (messages[i].trim().isEmpty() ?
+						Collections.emptyList() : Collections.singletonList(messages[i]));
+			default:
+				return Arrays.stream(Arrays.copyOfRange(messages, i, messages.length))
+						.filter(message -> !message.trim().isEmpty())
+						.collect(Collectors.toList());
+		}
 	}
 
 	/**
